tenzir/tests/node/run/startup_errors.txt
error: the file `inputs/this-file-does-not-exist.json` does not exist
 --> node/run/startup_errors.tql:5:8
  |
5 |   from env("INPUTS") + "/this-file-does-not-exist.json"
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
  |
